# fw-block-old

./: .dockerignore  .gitignore  README.md  compose.yml  manage.py  pyproject.toml
docker/django/: Dockerfile  gunicorn.sh
docker/nginx/: nginx.conf
docker/nginx/ssl/: self-signed.conf
fw_block/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
fw_block/forms/: __init__.py  ip_action.py  search.py
fw_block/migrations/: 0001_initial.py  0002_alter_ipaddress_city_alter_ipaddress_country_and_more.py  0003_protectednetworks.py  0004_alter_firewall_options_alter_ipaddress_options.py  0005_alter_ipaddress_asn.py  0006_alter_ipaddress_options_and_more.py  0007_blockedlogs.py  0008_alter_blockedlogs_action.py  0009_alter_blockedlogs_options_alter_ipaddress_options.py  0010_blockedlogs_description_blockedlogs_reason.py  0011_alter_blockedlogs_description_and_more.py
fw_block/models/: __init__.py  blocked.py  blocked_logs.py  firewall.py  ip.py  protected_networks.py
fw_block/services/: __init__.py  asa_api.py  ip_api_query.py
fw_block/static/: initializeMaps.js  search.js
fw_block/static/datepicker/: flatpickr.js
fw_block/static/leaflet/: leaflet.css
fw_block/static/select/: select.js
fw_block/static/tom-select/: tom-select.js
fw_block/templates/: 400.html  403.html  404.html  500.html  base.html
fw_block/views/: __init__.py  block.py  details.py  index.py  logs.py  search.py  unblock.py  utils.py
public/static/: index.js  initializeMaps.js  initializeSelects.js  logs.js
theme/static_src/: package-lock.json  tailwind.config.js
(+12 files in other folders)
