[tool.poetry]
name = "fw-block"
version = "0.1.0"
description = "Web Application for blocking or unblocking IP addresses on configured CISCO ASA devices"
authors = ["Mr0rang3 <mr.0r4ng3@proton.me>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
django-environ = "^0.11.2"
requests = "^2.32.3"
gunicorn = "^23.0.0"
django-tailwind = "^3.8.0"


[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
